--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,13 @@
     font-family: "Poppins",sans-serif;
     color-scheme: dark;
 }
+
+.hide-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+  
+  .hide-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  
